--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,5 @@
 /* スマホ向けレイアウト */
-@media all and (max-width: 1081px) {
+@media all and (max-width: 800px) {
   
   .title {
     width: 100%;
@@ -7,41 +7,39 @@
 
   .message{
     text-align:left;
-    height:70px;
+    height:auto;
+    padding-top:100px;
   }
   .miffy{
-    height:70px;
+    width:100%;
+    height:auto;
     position:absolute;
     top:40%;
     left:0%;
-  }
+  } 
   .miffy img{
     width:40px;
   }
   .emote img{
-    width:20px;
+    width:30px;
     position:absolute;
-    top:-10%;
-    left:70%;
+    top:-40%;
+    left:1%;
   }    
   .fukidasi-miffy{
-    width:500px;
+    width:90%;
     position:absolute;
     top:-125%;
-    left:-20%;
+    left:10%;
   }
   .fukidasi-miffy img{
-    width:500px;
+    width:100%;
   }
   .serifu-miffy p{
+    padding-right:5px;
     position:absolute;
-    top:20%;
-    left:20%;
-  }
-  .answer{
-    background-color:rgba(0,255,0,0.0);
-    text-align:center;
-    display:none;
+    top:10%;
+    left:10%;
   }
   
 
@@ -51,7 +49,7 @@
     opacity:0;
     width:100%;
     margin-top:80px;
-    background-color:rgba(0,0,255,0.2);
+    background-color:rgba(0,0,255,0.0);
     display:block;
     text-align:left;
   }
@@ -62,44 +60,46 @@
   .megane{
     position:relative;
     display:inline-block;
-    height:120px;
+    height:auto;
   }
   .megane img{
     width:60px;
     padding-top:30px;
   }
   .emote-megane img{
-    width:20px;
+    width:30px;
     position:absolute;
-    top:0%;
-    left:12%;
+    top:-25%;
+    left:2%;
   }
   
   .fukidasi-megane{
+    width:90%;
+    height:auto;
     position:relative;
     display:inline-block;
     position:absolute;
-    top:-50%;
-    left:-10%;
+    top:-55%;
+    left:10%;
   }
   .fukidasi-megane img{
-    width:500px;
+    width:100%;
     padding-top:10px;
   }
   .serifu-megane{
+    padding-right:5px;
     position:absolute;
-    top:30%;
-    left:20%;
+    top:10%;
+    left:10%;
   }
 
-
   /*モーダルデザイン*/
-
   .modal{
     text-align:left;
   }
   .modal-megane{
-    height:100px;
+    width:88%;
+    height:auto;
     margin-top:10px;
   }  
   .modal-megane img{
@@ -107,16 +107,48 @@
   }
   .modal-fukidasi-megane{
     position:absolute;
-    top:-50%;
-    left:50%;
+    top:-30%;
+    left:20%;
   }
   .modal-fukidasi-megane img{
-    width:500px;
+    width:100%;
   }
+  .modal-serifu-megane{
+    position:absolute;
+    top:25%;
+    left:10%;
+  }  
   .end{
     width:70%;
   }
+  .madori{
+    width:90%;
+    margin:0 auto;
+    position:relative;
+    background-color:rgba(0,255,128,0.0);
+  }
+  .point img{
+    opacity:0.8;
+    width:9%;
+    height:10%;
+    position:absolute;
+    top:2.5%;
+    left:50.5%;
+  }
+
+  /*メッセージカード*/
+  .msgcard-wrapper{
+    width:100%;
+  }  
+  .msg{
+    padding-top:10px;
+    padding-left:5px;
+    padding-right:5px;
+    font-size:40px;
+  }
+  .from{
+    padding-right:20px;
+    font-size:25px;
+  }
   
-
-
 }
